--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,8 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
+        android:minHeight="48dp"
         app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -40,7 +39,7 @@
             android:id="@+id/button40"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button"
+            android:text="C"
             app:layout_constraintEnd_toEndOf="@+id/button39"
             app:layout_constraintStart_toStartOf="@+id/button39"
             app:layout_constraintTop_toTopOf="parent" />
@@ -49,7 +48,7 @@
             android:id="@+id/button21"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button"
+            android:text="="
             app:layout_constraintStart_toEndOf="@+id/button22"
             app:layout_constraintTop_toBottomOf="@+id/button24" />
 
@@ -57,15 +56,15 @@
             android:id="@+id/button22"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button"
-            app:layout_constraintTop_toBottomOf="@+id/button25"
-            tools:layout_editor_absoluteX="193dp" />
+            android:text="."
+            app:layout_constraintStart_toEndOf="@+id/button41"
+            app:layout_constraintTop_toBottomOf="@+id/button25" />
 
         <Button
             android:id="@+id/button24"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button"
+            android:text="*"
             app:layout_constraintStart_toEndOf="@+id/button25"
             app:layout_constraintTop_toBottomOf="@+id/button28" />
 
@@ -73,7 +72,7 @@
             android:id="@+id/button25"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button"
+            android:text="9"
             app:layout_constraintStart_toEndOf="@+id/button26"
             app:layout_constraintTop_toBottomOf="@+id/button29" />
 
@@ -81,7 +80,7 @@
             android:id="@+id/button26"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button"
+            android:text="8"
             app:layout_constraintStart_toEndOf="@+id/button27"
             app:layout_constraintTop_toBottomOf="@+id/button30" />
 
@@ -89,7 +88,7 @@
             android:id="@+id/button27"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button"
+            android:text="7"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/button31" />
 
@@ -97,7 +96,7 @@
             android:id="@+id/button28"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button"
+            android:text="-"
             app:layout_constraintStart_toEndOf="@+id/button29"
             app:layout_constraintTop_toBottomOf="@+id/button32" />
 
@@ -105,7 +104,7 @@
             android:id="@+id/button29"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button"
+            android:text="6"
             app:layout_constraintStart_toEndOf="@+id/button30"
             app:layout_constraintTop_toBottomOf="@+id/button33" />
 
@@ -113,7 +112,7 @@
             android:id="@+id/button30"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button"
+            android:text="5"
             app:layout_constraintStart_toEndOf="@+id/button31"
             app:layout_constraintTop_toBottomOf="@+id/button34" />
 
@@ -121,7 +120,7 @@
             android:id="@+id/button31"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button"
+            android:text="4"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/button35" />
 
@@ -129,7 +128,7 @@
             android:id="@+id/button32"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button"
+            android:text="+"
             app:layout_constraintStart_toEndOf="@+id/button33"
             app:layout_constraintTop_toBottomOf="@+id/button39" />
 
@@ -137,7 +136,7 @@
             android:id="@+id/button33"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button"
+            android:text="3"
             app:layout_constraintStart_toEndOf="@+id/button34"
             app:layout_constraintTop_toBottomOf="@+id/button38" />
 
@@ -145,7 +144,7 @@
             android:id="@+id/button34"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button"
+            android:text="2"
             app:layout_constraintStart_toEndOf="@+id/button35"
             app:layout_constraintTop_toBottomOf="@+id/button37" />
 
@@ -153,7 +152,7 @@
             android:id="@+id/button35"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button"
+            android:text="1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/button36" />
 
@@ -185,7 +184,7 @@
             android:id="@+id/button39"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button"
+            android:text="/"
             app:layout_constraintStart_toEndOf="@+id/button38"
             app:layout_constraintTop_toBottomOf="@+id/button40" />
 
@@ -193,7 +192,7 @@
             android:id="@+id/button41"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Button"
+            android:text="0"
             app:layout_constraintEnd_toEndOf="@+id/button26"
             app:layout_constraintStart_toStartOf="@+id/button27"
             app:layout_constraintTop_toBottomOf="@+id/button27" />
