--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,48 +8,66 @@
 
     <TableLayout
         android:id="@+id/tableLayout"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView">
+        app:layout_constraintTop_toBottomOf="@+id/output"
+        app:layout_constraintVertical_bias="0.95">
 
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <Button
-                android:id="@+id/button4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/Seven"
+                android:id="@+id/dummyButton1"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:text="@string/placeholder"
+                android:textColor="#000000"
                 android:textSize="20sp"
-                android:layout_marginHorizontal="2dp"/>
+                tools:visibility="invisible"
+                android:layout_margin="5dp"/>
 
             <Button
-                android:id="@+id/button3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/Eight"
+                android:id="@+id/dummyButton2"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="0dp"
+                android:layout_height="55dp"
+                android:layout_weight="1"
+                android:text="@string/placeholder"
+                android:textColor="#000000"
                 android:textSize="20sp"
-                android:layout_marginHorizontal="2dp"/>
+                tools:visibility="invisible"
+                android:layout_margin="5dp"/>
 
             <Button
-                android:id="@+id/button2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/Nine"
+                android:id="@+id/dummyButton3"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="0dp"
+                android:layout_height="55dp"
+                android:layout_weight="1"
+                android:text="@string/placeholder"
+                android:textColor="#000000"
                 android:textSize="20sp"
-                android:layout_marginHorizontal="2dp"/>
+                tools:visibility="invisible"
+                android:layout_margin="5dp"/>
 
             <Button
-                android:id="@+id/button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/Divide"
-                android:textSize="20sp"
-                android:layout_marginHorizontal="2dp"/>
+                android:id="@+id/deleteBTN"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="0dp"
+                android:layout_height="55dp"
+                android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:text="@string/backspace"
+                android:textColor="#000000"
+                android:layout_margin="5dp"
+
+                />
         </TableRow>
 
         <TableRow
@@ -57,122 +75,284 @@
             android:layout_height="match_parent">
 
             <Button
-                android:id="@+id/button8"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/Four"
-                android:textSize="20sp"
-                android:layout_marginHorizontal="2dp"/>
+                android:id="@+id/ClearBTN"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="0dp"
+                android:layout_height="55dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:backgroundTint="#DD2C00"
+                android:text="@string/clear"
+                android:textColor="#000000"
+                android:textSize="20sp" />
 
             <Button
-                android:id="@+id/button7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/Five"
-                android:textSize="20sp"
-                android:layout_marginHorizontal="2dp"/>
+                android:id="@+id/NegateBTN"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="0dp"
+                android:layout_height="55dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:text="@string/negate"
+                android:textColor="#000000"
+                android:textSize="20sp" />
 
             <Button
-                android:id="@+id/button6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/Six"
-                android:textSize="20sp"
-                android:layout_marginHorizontal="2dp"/>
+                android:id="@+id/ExponentBTN"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="0dp"
+                android:layout_height="55dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:text="@string/exponent"
+                android:textColor="#000000"
+                android:textSize="20sp" />
 
             <Button
-                android:id="@+id/button5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/Multiply"
-                android:textSize="20sp"
-                android:layout_marginHorizontal="2dp"/>
+                android:id="@+id/ParenthesisBTN"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="0dp"
+                android:layout_height="55dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/circle"
+                android:text="@string/parenthesis"
+                android:textColor="#000000"
+                android:textSize="20sp" />
         </TableRow>
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-            <Button
-                android:id="@+id/button12"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/One"
-                android:textSize="20sp"
-                android:layout_marginHorizontal="2dp"/>
+        <Button
+            android:id="@+id/sevenBTN"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_height="55dp"
+            android:layout_weight="1"
+            android:background="@drawable/circle"
+            android:text="@string/Seven"
+            android:textColor="#000000"
+            android:textSize="20sp"
+            android:layout_margin="5dp"/>
 
-            <Button
-                android:id="@+id/button11"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/Two"
-                android:textSize="20sp"
-                android:layout_marginHorizontal="2dp"/>
+        <Button
+            android:id="@+id/eightBTN"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_height="55dp"
+            android:layout_weight="1"
+            android:background="@drawable/circle"
+            android:text="@string/Eight"
+            android:textColor="#000000"
+            android:textSize="20sp"
+            android:layout_margin="5dp"/>
 
-            <Button
-                android:id="@+id/button10"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/Three"
-                android:textSize="20sp"
-                android:layout_marginHorizontal="2dp"/>
+        <Button
+            android:id="@+id/nineBTN"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_height="55dp"
+            android:layout_weight="1"
+            android:background="@drawable/circle"
+            android:text="@string/Nine"
+            android:textColor="#000000"
+            android:textSize="20sp"
+            android:layout_margin="5dp"/>
 
-            <Button
-                android:id="@+id/button9"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/Minus"
-                android:textSize="20sp"
-                android:layout_marginHorizontal="2dp"/>
-        </TableRow>
+        <Button
+            android:id="@+id/divideBTN"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_height="55dp"
+            android:layout_weight="1"
+            android:background="@drawable/circle"
+            android:text="@string/Divide"
+            android:textColor="#000000"
+            android:textSize="20sp"
+            android:layout_margin="5dp"/>
+    </TableRow>
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-            <Button
-                android:id="@+id/button16"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/Zero"
-                android:textSize="20sp"
-                android:layout_marginHorizontal="2dp"/>
+        <Button
+            android:id="@+id/fourBTN"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_height="55dp"
+            android:layout_weight="1"
+            android:background="@drawable/circle"
+            android:text="@string/Four"
+            android:textColor="#000000"
+            android:textSize="20sp"
+            android:layout_margin="5dp"/>
 
-            <Button
-                android:id="@+id/button15"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/Decimal"
-                android:textSize="20sp"
-                android:layout_marginHorizontal="2dp"/>
+        <Button
+            android:id="@+id/fiveBTN"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_height="55dp"
+            android:layout_weight="1"
+            android:background="@drawable/circle"
+            android:text="@string/Five"
+            android:textColor="#000000"
+            android:textSize="20sp"
+            android:layout_margin="5dp"/>
 
-            <Button
-                android:id="@+id/button14"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/Equals"
-                android:textSize="20sp"
-                android:layout_marginHorizontal="2dp"/>
+        <Button
+            android:id="@+id/sixBTN"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_height="55dp"
+            android:layout_weight="1"
+            android:background="@drawable/circle"
+            android:text="@string/Six"
+            android:textColor="#000000"
+            android:textSize="20sp"
+            android:layout_margin="5dp"/>
 
-            <Button
-                android:id="@+id/button13"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/Add"
-                android:textSize="20sp"
-                android:layout_marginHorizontal="2dp"/>
-        </TableRow>
-    </TableLayout>
+        <Button
+            android:id="@+id/multiplyBTN"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_height="55dp"
+            android:layout_weight="1"
+            android:background="@drawable/circle"
+            android:text="@string/Multiply"
+            android:textColor="#000000"
+            android:textSize="20sp"
+            android:layout_margin="5dp"/>
+    </TableRow>
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="104dp"
-        android:text="@string/textViewDefault"
-        android:textSize="34sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <Button
+            android:id="@+id/oneBTN"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_height="55dp"
+            android:layout_weight="1"
+            android:background="@drawable/circle"
+            android:text="@string/One"
+            android:textColor="#000000"
+            android:textSize="20sp"
+            android:layout_margin="5dp"/>
+
+        <Button
+            android:id="@+id/twoBTN"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_height="55dp"
+            android:layout_weight="1"
+            android:background="@drawable/circle"
+            android:text="@string/Two"
+            android:textColor="#000000"
+            android:textSize="20sp"
+            android:layout_margin="5dp"/>
+
+        <Button
+            android:id="@+id/threeBTN"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_height="55dp"
+            android:layout_weight="1"
+            android:background="@drawable/circle"
+            android:text="@string/Three"
+            android:textColor="#000000"
+            android:textSize="20sp"
+            android:layout_margin="5dp"/>
+
+        <Button
+            android:id="@+id/minusBTN"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_height="55dp"
+            android:layout_weight="1"
+            android:background="@drawable/circle"
+            android:text="@string/Minus"
+            android:textColor="#000000"
+            android:textSize="20sp"
+            android:layout_margin="5dp"/>
+    </TableRow>
+
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <Button
+            android:id="@+id/zeroBTN"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_height="55dp"
+            android:layout_weight="1"
+            android:background="@drawable/circle"
+            android:text="@string/Zero"
+            android:textColor="#000000"
+            android:textSize="20sp"
+            tools:ignore="DuplicateSpeakableTextCheck"
+            android:layout_margin="5dp"/>
+
+        <Button
+            android:id="@+id/decimalBTN"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_height="55dp"
+            android:layout_weight="1"
+            android:background="@drawable/circle"
+            android:text="@string/Decimal"
+            android:textColor="#000000"
+            android:textSize="20sp"
+            android:layout_margin="5dp"/>
+
+        <Button
+            android:id="@+id/equalsBTN"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_height="55dp"
+            android:layout_weight="1"
+            android:background="@drawable/circle"
+            android:text="@string/Equals"
+            android:textColor="#000000"
+            android:textSize="20sp"
+            android:layout_margin="5dp"/>
+
+        <Button
+            android:id="@+id/additionBTN"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_height="55dp"
+            android:layout_weight="1"
+            android:background="@drawable/circle"
+            android:text="@string/Add"
+            android:textColor="#000000"
+            android:textSize="20sp"
+            android:layout_margin="5dp"/>
+    </TableRow>
+</TableLayout>
+
+<EditText
+    android:id="@+id/output"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="104dp"
+    android:text="@string/textViewDefault"
+    android:textSize="36sp"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.498"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    android:autofillHints="false"
+    android:inputType="none"
+    tools:ignore="LabelFor"
+    android:textAlignment="textEnd"
+    />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
