--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -12,12 +12,12 @@
         android:id="@+id/output"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="10dp"
         android:autofillHints="false"
         android:ems="10"
         android:inputType="none"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
         android:text="@string/display"
         android:textAlignment="textEnd"
         android:textSize="36sp"
@@ -33,7 +33,8 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="10dp"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/output"
         app:layout_constraintEnd_toEndOf="parent"
@@ -58,6 +59,7 @@
             android:layout_height="40dp"
             android:layout_margin="5dp"
             android:background="@drawable/circle"
+            android:onClick="trigLogBTN"
             android:text="@string/LogText"
             android:textAllCaps="false"
             android:textColor="#000000"
@@ -71,6 +73,7 @@
             android:layout_height="40dp"
             android:layout_margin="5dp"
             android:background="@drawable/circle"
+            android:onClick="trigAbsvalBTN"
             android:text="@string/absoluteValueText"
             android:textAllCaps="false"
             android:textColor="#000000"
@@ -83,7 +86,10 @@
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_margin="5dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="4dp"
             android:background="@drawable/circle"
+            android:onClick="trigIntanBTN"
             android:text="@string/trigArcTanText"
             android:textAllCaps="false"
             android:textColor="#000000"
@@ -97,6 +103,7 @@
             android:layout_height="40dp"
             android:layout_margin="5dp"
             android:background="@drawable/circle"
+            android:onClick="trigPiBTN"
             android:text="@string/piText"
             android:textAllCaps="false"
             android:textColor="#000000"
@@ -110,6 +117,7 @@
             android:layout_height="40dp"
             android:layout_margin="5dp"
             android:background="@drawable/circle"
+            android:onClick="trigLnBTN"
             android:text="@string/naturalLogText"
             android:textAllCaps="false"
             android:textColor="#000000"
@@ -123,6 +131,7 @@
             android:layout_height="40dp"
             android:layout_margin="5dp"
             android:background="@drawable/circle"
+            android:onClick="trigSqrtBTN"
             android:text="@string/squareRootText"
             android:textAllCaps="false"
             android:textColor="#000000"
@@ -136,6 +145,7 @@
             android:layout_height="40dp"
             android:layout_margin="5dp"
             android:background="@drawable/circle"
+            android:onClick="trigIncosBTN"
             android:text="@string/trigArcCosText"
             android:textAllCaps="false"
             android:textColor="#000000"
@@ -148,7 +158,10 @@
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_margin="5dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="4dp"
             android:background="@drawable/circle"
+            android:onClick="trigSinBTN"
             android:text="@string/trigSinText"
             android:textAllCaps="false"
             android:textColor="#000000"
@@ -161,7 +174,10 @@
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_margin="5dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="4dp"
             android:background="@drawable/circle"
+            android:onClick="trigTanBTN"
             android:text="@string/trigTanText"
             android:textAllCaps="false"
             android:textColor="#000000"
@@ -175,6 +191,7 @@
             android:layout_height="40dp"
             android:layout_margin="5dp"
             android:background="@drawable/circle"
+            android:onClick="trigEBTN"
             android:text="@string/eText"
             android:textAllCaps="false"
             android:textColor="#000000"
@@ -188,6 +205,7 @@
             android:layout_height="40dp"
             android:layout_margin="5dp"
             android:background="@drawable/circle"
+            android:onClick="trigInsinBTN"
             android:text="@string/trigArcSinText"
             android:textAllCaps="false"
             android:textColor="#000000"
@@ -201,6 +219,7 @@
             android:layout_height="40dp"
             android:layout_margin="5dp"
             android:background="@drawable/circle"
+            android:onClick="trigCosBTN"
             android:text="@string/trigCosText"
             android:textAllCaps="false"
             android:textColor="#000000"
@@ -219,7 +238,7 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.953">
+        app:layout_constraintVertical_bias="0.931">
 
         <Button
             android:id="@+id/zeroBTN"
